--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -7,8 +7,117 @@
     <title>Vite App</title>
   </head>
   <body>
-  <canvas id="bg">
-  </canvas>
-    <script type="module" src="/main.js"></script>
+  <canvas id="bg"></canvas>
+  <main>
+    <header>
+      <h1>
+        Domenic Mangano
+      </h1>
+      <p>
+        Welcome to My Portfolio!
+      </p>
+    </header>
+    <blockquote>
+      <p>“The greatest risk we face in software development is that of overestimating our own knowledge.”</p>
+    </blockquote>
+
+    <section>
+      <h2>About Me</h2>
+      <hr>
+      <p>
+        Wearer of many hats, fulfilling the roles of a husband and proud father to three beautiful children,
+        while simultaneously pursuing my academic journey as a Software Engineering student at the
+        Rochester Institute of Technology in Rochester, NY. Ever since my first "Google", I've been
+        enamored with computers and how they work, and have now decided to turn my love into a career.
+      </p>
+      <p>
+        By channeling my enthusiasm and determination, I aim to not only excel academically but also seize
+        every opportunity that comes my way while broadening my horizons, strengthening my problem-solving
+        abilities, and refining my technical skills.
+      </p>
+    </section>
+
+    <section class="light">
+      <h2>Projects</h2>
+      <hr>
+      <h3>
+        Movi Team Project (Content Recommendation)
+      </h3>
+
+        <p>Team based project that developed a website that can pull from an external API of relevant content
+          to the user’s preferences and presents it in an organized manner while increasing web development and
+          web framework skills.</p>
+        <ul>
+          <li> Implemented over 3 iterations, first focusing on base architecture, then moving into logic, and finally moving to presentation elements</li>
+          <li> Documented and submitted progress and functionality via bi-weekly artifacts, also completing retrospectives</li>
+          <li> Released working proof of concept website for peer review along with working API’s populate content with
+          working user management functionality. Tools: UML, Figma, Git, Discord, VS Code</li>
+        </ul>
+
+        <h3>
+         7Shoes E-Commerce Store
+        </h3>
+      <p>
+        Team based project dedicated to selling different styles of shoes,
+        including filter and search options, user signup and login, checkout functionality,
+        and admin specific capabilities such as order fulfillment and inventory management.
+      </p>
+
+
+      <h2>🏆 Accomplishments and Awards</h2>
+      <hr>
+      <h3>
+        Monroe Community College
+      </h3>
+      <ul>
+        <li>Graduated with a 3.5 overall GPA</li>
+        <li>Achieved Dean's List in all 4 semesters attended as a Full-Time Student</li>
+        <li>Accepted into Phi Theta Kappa Honor Society</li>
+      </ul>
+
+      <h3>
+        Rochester Institute of Technology
+      </h3>
+      <ul>
+        <li>Achieved Dean's List in Spring 2023 Semester</li>
+      </ul>
+
+    </section>
+
+    <section class="left">
+      <h2> Professional Experience </h2>
+      <hr>
+      <h3>Accessible Learning Labs at RIT</h3>
+      <p>
+        Building user interactive labs that teach software engineers how to make the
+        internet a more welcoming place for those with disabilities as well as AI/ML and
+        STEM education.
+      </p>
+      <h4>
+        Jr Fullstack Software Engineer | November 2022 - Present
+      </h4>
+      <ul>
+        <li>Use of Git workflow, AGILE, use of Trello, Slack, Figma, and Discord in team planning, daily team standups</li>
+        <li>Have gained invaluable experience in ReactJS frontend development</li>
+      </ul>
+      <h4>
+        Project Manager | May 2023 - Present
+      </h4>
+      <ul>
+        <li>Overseeing of development and task coordination among team members</li>
+        <li>Completion of research for future labs and products</li>
+        <li>Development and implementation of comprehensive social media strategy to expand project audience and viewership</li>
+      </ul>
+
+    </section>
+
+    <blockquote>
+      <p>Thank You for Viewing My Portfolio!</p>
+    </blockquote>
+
+  </main>
+  <script type="module" src="/main.js"></script>
   </body>
 </html>
+
+
