added porsche club to projects

--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -62,7 +62,24 @@
         including filter and search options, user signup and login, checkout functionality,
         and admin specific capabilities such as order fulfillment and inventory management.
       </p>
-
+      <ul>
+        <li>Frontend developed using Angular framework and Typescript with a Java based backend API</li>
+        <li>Heavy use of SCRUM and AGILE project management frameworks</li>
+        <li>Took leadership role as project manager of development team</li>
+      </ul>
+      <h3>
+        Porsche Club of Niagara Region (Event Scheduling App)
+      </h3>
+      <p>
+        Personal project being developed for the local chapter of the Porsche Club of America,
+        designed to make scheduling events, getting in touch with fellow club members,
+        and sharing images of rallies easy and pain-free.
+      </p>
+      <ul>
+        <li>Frontend developed using Angular framework and Typescript with a Java based backend API</li>
+        <li>Experience with and implementation of MaterialUI components</li>
+        <li>App deployment will be released for both iOS and Android users</li>
+      </ul>
 
       <h2>🏆 Accomplishments and Awards</h2>
       <hr>
