added tigertalk, removed movi

--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -41,17 +41,17 @@
       <h2>Projects</h2>
       <hr>
       <h3>
-        Movi Team Project (Content Recommendation)
+        TigerTalk GenCyber Social Media Hacking Activity
       </h3>
 
-        <p>Team based project that developed a website that can pull from an external API of relevant content
-          to the user’s preferences and presents it in an organized manner while increasing web development and
-          web framework skills.</p>
+        <p>Social Media Password Hacking activity built for GenCyber Camp 2023 camp held at RIT. Campers are able
+        to log in/create a user, post and view statuses, then are tasked with reverse engineering and hacking pre-existing
+        user accounts based on the contents of their posts. This activity helps teach campers the importance of strong
+        passwords, limiting personal data released to the public, and Cybersecurity fundamentals to protect themselves in the
+        future </p>
         <ul>
-          <li> Implemented over 3 iterations, first focusing on base architecture, then moving into logic, and finally moving to presentation elements</li>
-          <li> Documented and submitted progress and functionality via bi-weekly artifacts, also completing retrospectives</li>
-          <li> Released working proof of concept website for peer review along with working API’s populate content with
-          working user management functionality. Tools: UML, Figma, Git, Discord, VS Code</li>
+          <li> Developed using an Angular Typescript frontend and a Java RestAPI backend and Bootstrap CSS</li>
+          <li> Deployed and utilized by campers during 2023 GenCyber Camp at RIT</li>
         </ul>
 
         <h3>
@@ -63,7 +63,7 @@
         and admin specific capabilities such as order fulfillment and inventory management.
       </p>
       <ul>
-        <li>Frontend developed using Angular framework and Typescript with a Java based backend API</li>
+        <li>Frontend developed using Angular framework and Typescript with a Java based backend API with custom CSS classes</li>
         <li>Heavy use of SCRUM and AGILE project management frameworks</li>
         <li>Took leadership role as project manager of development team</li>
       </ul>
