committing updated resume

--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -37,25 +37,31 @@
       </p>
     </section>
 
+    <section class="left">
+      <h2> Professional Experience </h2>
+      <hr>
+      <h3>Accessible Learning Labs at RIT</h3>
+      <p>
+        Building user interactive labs that teach software engineers how to make the
+        internet a more welcoming place for those with disabilities as well as AI/ML and
+        STEM education.
+      </p>
+      <h4>
+        Jr Fullstack Software Engineer | November 2022 - Present
+      </h4>
+      <ul>
+        <li>Use of Git workflow, AGILE, use of Trello, Slack, Figma, and Discord in team planning, daily team standups</li>
+        <li>Have gained invaluable experience in ReactJS frontend development</li>
+      </ul>
+
+
+    </section>
+
     <section class="light">
       <h2>Projects</h2>
       <hr>
-      <h3>
-        Movi Team Project (Content Recommendation)
-      </h3>
-
-        <p>Team based project that developed a website that can pull from an external API of relevant content
-          to the user’s preferences and presents it in an organized manner while increasing web development and
-          web framework skills.</p>
-        <ul>
-          <li> Implemented over 3 iterations, first focusing on base architecture, then moving into logic, and finally moving to presentation elements</li>
-          <li> Documented and submitted progress and functionality via bi-weekly artifacts, also completing retrospectives</li>
-          <li> Released working proof of concept website for peer review along with working API’s populate content with
-          working user management functionality. Tools: UML, Figma, Git, Discord, VS Code</li>
-        </ul>
-
         <h3>
-         7Shoes E-Commerce Store
+         7Shoes E-Commerce Store (Team Project)
         </h3>
       <p>
         Team based project dedicated to selling different styles of shoes,
@@ -64,9 +70,20 @@
       </p>
       <ul>
         <li>Frontend developed using Angular framework and Typescript with a Java based backend API</li>
+        <li> Implemented over 3 iterations, first focusing on base architecture, then moving into logic, and finally moving to presentation elements</li>
+        <li> Documented and submitted progress and functionality via bi-weekly artifacts, also completing retrospectives</li>
+        <li> Released working proof of concept website for peer review along with working API’s populate content with
+          working user management functionality. Tools: UML, Figma, Git, Slack</li>
         <li>Heavy use of SCRUM and AGILE project management frameworks</li>
         <li>Took leadership role as project manager of development team</li>
-      </ul>
+        <li> Repo links:
+          <ul>
+            <li>
+              Repo:
+              <a href="https://github.com/RIT-SWEN-261-01/team-project-2225-swen-261-01-7g-sevens.git">https://github.com/RIT-SWEN-261-01/team-project-2225-swen-261-01-7g-sevens.git</a>
+            </li>
+          </ul>
+        </li>
       <h3>
         Porsche Club of Niagara Region (Event Scheduling App)
       </h3>
@@ -79,6 +96,44 @@
         <li>Frontend developed using Angular framework and Typescript with a Java based backend API</li>
         <li>Experience with and implementation of MaterialUI components</li>
         <li>App deployment will be released for both iOS and Android users</li>
+        <li> Repo links:
+          <ul>
+            <li>
+              API Repo:
+              <a href="https://github.com/dm9965/porsche-app-api.git">https://github.com/dm9965/porsche-app-api.git</a>
+            </li>
+            <li>
+              UI Repo:
+              <a href="https://github.com/dm9965/porsche-app.git">https://github.com/dm9965/porsche-app.git</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <h3>
+        GenCyber 2023 Social Media Hacking Project (Individual Project)
+      </h3>
+      <p>Designed and developed for the 2023 GenCyber Summer Camp that gives campers an interactive look into the importance of
+        developing high quality passwords, as well as safe social media practices and reduced personal information in user posts in
+        the form of a social media platform. Campers are given login/signup functionality, and are greeted with a feed of
+        user posts along with a window containing usernames and input boxes where they are able to brute force hack their way into
+        the user posts based on information they shared in their posts. The campers had so much fun with this activity the first day,
+        they as that we created more users/posts and play the game again the next day.
+      </p>
+      <ul>
+        <li> Front-end implemented using Angular framework with Typescript, along with a Java-based back-end API to store user posts, user info, and other data</li>
+        <li> Developed and successfully deployed in a two week window </li>
+        <li> Repo links:
+          <ul>
+            <li>
+              API Repo:
+              <a href="https://github.com/GenCyber-2023/gencyber-social-media-api">https://github.com/GenCyber-2023/gencyber-social-media-api</a>
+            </li>
+            <li>
+              UI Repo:
+              <a href="https://github.com/GenCyber-2023/gencyber-social-media-ui.git">https://github.com/GenCyber-2023/gencyber-social-media-ui.git</a>
+            </li>
+          </ul>
+        </li>
       </ul>
 
       <h2>🏆 Accomplishments and Awards</h2>
@@ -124,6 +179,18 @@
         <li>Overseeing of development and task coordination among team members</li>
         <li>Completion of research for future labs and products</li>
         <li>Development and implementation of comprehensive social media strategy to expand project audience and viewership</li>
+      </ul>
+      <h3> Developer and Camp Counselor for GenCyber 2023 at RIT | June 2023 - July 2023</h3>
+      <ul>
+        <p>GenCyber is a national initiative aimed at increasing interest in cybersecurity careers and improving
+          cybersecurity knowledge among students and educators. Gencyber specifically targets students in grades
+          8-12 and offers summer camps where participants learn about various aspects of cybersecurity, such as secure
+          coding, network security, cryptography, and ethical hacking.</p>
+        <li>Developed and deployed multiple pieces of interactive and informative course content
+          used by over 30 campers in grades 8-12 over the course of the camp</li>
+        <li>Assisted students in learning and developing Python coding skills using my own experience in writing Python</li>
+        <li>After content development concluded, I worked as a camp counselor to guide and assist campers with questions
+        about topics from college to programming to internships</li>
       </ul>
 
     </section>
