new styling more mobile friendly

--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Domenic Mangano's Portfolio</title>
   </head>
   <body>
   <canvas id="bg"></canvas>
   <main>
     <header>
-      <h1>
+      <h1 style="font-size: 150%">
         Domenic Mangano
       </h1>
       <p>
@@ -37,22 +37,48 @@
       </p>
     </section>
 
-    <section class="left">
-      <h2> Professional Experience </h2>
+    <section class="skills">
+      <h2 style="width: 20%"> Skills and Tools </h2>
       <hr>
-      <h3>Accessible Learning Labs at RIT</h3>
-      <p>
-        Building user interactive labs that teach software engineers how to make the
-        internet a more welcoming place for those with disabilities as well as AI/ML and
-        STEM education.
-      </p>
-      <h4>
-        Jr Fullstack Software Engineer | November 2022 - Present
-      </h4>
-      <ul>
-        <li>Use of Git workflow, AGILE, use of Trello, Slack, Figma, and Discord in team planning, daily team standups</li>
-        <li>Have gained invaluable experience in ReactJS frontend development</li>
-      </ul>
+        <div>
+            <h3 style="width: 200px">Languages and Frameworks</h3>
+            <ul>
+                <li>Angular</li>
+                <li>React</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>TypeScript</li>
+                <li>MySQL</li>
+                <li>ViteJS</li>
+                <li>ThreeJS</li>
+                <li>Swift</li>
+                <li>HTML/CSS</li>
+            </ul>
+        </div>
+        <div style="display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: center;">
+            <h3>IDEs</h3>
+            <ul>
+                <li>IntelliJ</li>
+                <li>WebStorm</li>
+                <li>VS Code</li>
+                <li>DataGrip</li>
+                <li>PyCharm</li>
+                <li>XCode</li>
+            </ul>
+        </div>
+        <div>
+            <h3 style="width: 200px">Project Management and Design</h3>
+            <ul>
+                <li>AGILE</li>
+                <li>SCRUM</li>
+                <li>Figma</li>
+                <li>Trello</li>
+            </ul>
+        </div>
 
 
     </section>
@@ -87,6 +113,7 @@
             </li>
           </ul>
         </li>
+      </ul>
       <h3>
         Porsche Club of Niagara Region (Event Scheduling App)
       </h3>
@@ -156,17 +183,19 @@
       <ul>
         <li>Achieved Dean's List in Spring 2023 Semester</li>
       </ul>
-
     </section>
 
-    <section class="left">
+    <section class="right">
       <h2> Professional Experience </h2>
       <hr>
       <h3>Accessible Learning Labs at RIT</h3>
       <p>
-        Building user interactive labs that teach software engineers how to make the
-        internet a more welcoming place for those with disabilities as well as AI/ML and
-        STEM education.
+        Accessible Learning Labs at RIT (Rochester Institute of Technology) is an initiative and program aimed at
+        creating accessible and inclusive learning experiences for individuals with disabilities, as well as advancing education
+        in AI/ML and other STEM disciplines. The labs focus on improving accessibility in various aspects of education, technology,
+        and digital content. The program collaborates with students, faculty, and staff at RIT to identify barriers to accessibility
+        and develop solutions to address them. It provides resources, tools, and training to ensure that individuals with disabilities
+        have equal access to educational materials, technology, and opportunities.
       </p>
       <h4>
         Jr Fullstack Software Engineer | November 2022 - Present
@@ -183,12 +212,14 @@
         <li>Completion of research for future labs and products</li>
         <li>Development and implementation of comprehensive social media strategy to expand project audience and viewership</li>
       </ul>
-      <h3> Developer and Camp Counselor for GenCyber 2023 at RIT | June 2023 - July 2023</h3>
+      <h3>GenCyber 2023 at RIT</h3>
+      <p>GenCyber is a national initiative aimed at increasing interest in cybersecurity careers and improving
+        cybersecurity knowledge among students and educators. Gencyber specifically targets students in grades
+        8-12 and offers summer camps where participants learn about various aspects of cybersecurity, such as secure
+        coding, network security, cryptography, and ethical hacking.
+      </p>
+      <h4>Developer and Camp Counselor | June 2023 - July 2023</h4>
       <ul>
-        <p>GenCyber is a national initiative aimed at increasing interest in cybersecurity careers and improving
-          cybersecurity knowledge among students and educators. Gencyber specifically targets students in grades
-          8-12 and offers summer camps where participants learn about various aspects of cybersecurity, such as secure
-          coding, network security, cryptography, and ethical hacking.</p>
         <li>Developed and deployed multiple pieces of interactive and informative course content
           used by over 30 campers in grades 8-12 over the course of the camp</li>
         <li>Assisted students in learning and developing Python coding skills using my own experience in writing Python</li>
