adding bingo and updating github repos

--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -128,7 +128,7 @@
           <ul>
             <li>
               Repo:
-              <a href="https://github.com/RIT-SWEN-261-01/team-project-2225-swen-261-01-7g-sevens.git">https://github.com/RIT-SWEN-261-01/team-project-2225-swen-261-01-7g-sevens.git</a>
+              <a href="https://github.com/dm9965/estore-project.git">https://github.com/dm9965/estore-project.git</a>
             </li>
           </ul>
         </li>
@@ -180,6 +180,26 @@
             <li>
               UI Repo:
               <a href="https://github.com/GenCyber-2023/gencyber-social-media-ui.git">https://github.com/GenCyber-2023/gencyber-social-media-ui.git</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <h3>
+        GenCyber 2023 Cybersecurity Bingo (Individual Project)
+      </h3>
+      <p>
+        Designed and built a functioning, fully developed bingo game based on cybersecurity terms that randomizes the board
+        for each user logged into it's server, and will alert the user that they have won the bingo game (horizontally, vertically,
+        or diagonally) with a visually fun confetti drop and winner notification.
+      </p>
+      <ul>
+        <li> Developed and implemented using Angular framework with Typescript</li>
+        <li> Repo links:
+          <ul>
+            <li>
+              Repo:
+              <a href="https://github.com/GenCyber-2023/cybersecuritybingo.git">https://github.com/GenCyber-2023/cybersecuritybingo.git</a>
             </li>
           </ul>
         </li>
