--- a/mangano-portfolio/index.html
+++ b/mangano-portfolio/index.html
@@ -22,7 +22,7 @@
     </blockquote>
 
     <section>
-      <h2>About Me</h2>
+      <h2 style="font-weight: 900">About Me</h2>
       <hr>
       <p>
         Wearer of many hats, fulfilling the roles of a husband and proud father to three beautiful children,
@@ -51,13 +51,14 @@
       </style>
       <div style="display: flex; flex-direction: row; width: 20%">
         <h2 style="width: 20%;
-                 padding-right: 4%"> Skills and Tools
+                 padding-right: 4%;
+                 font-weight: 900"> Skills and Tools
         </h2>
       </div>
         <div style="width: 25%;
               padding-left: 5%;
               border-left: white thin solid">
-            <h3>Languages and Frameworks</h3>
+            <h3 style="font-weight: 700">Languages and Frameworks</h3>
             <ul>
                 <li>Angular</li>
                 <li>React</li>
@@ -78,7 +79,7 @@
                     align-items: center;
                     width: 25%;
                     ">
-            <h3>IDEs</h3>
+            <h3 style="font-weight: 700">IDEs</h3>
             <ul>
                 <li>IntelliJ</li>
                 <li>WebStorm</li>
@@ -90,7 +91,7 @@
         </div>
         <div style="width: 25%;
                     padding-left: 5%">
-            <h3>Project Management and Design</h3>
+            <h3 style="font-weight: 700">Project Management and Design</h3>
             <ul>
                 <li>AGILE</li>
                 <li>SCRUM</li>
@@ -103,9 +104,9 @@
     </section>
 
     <section class="light">
-      <h2>Projects</h2>
+      <h2 style="font-weight: 900">Projects</h2>
       <hr>
-        <h3>
+        <h3 style="font-weight: 700">
          7Shoes E-Commerce Store (Team Project)
         </h3>
       <p>
@@ -133,7 +134,7 @@
           </ul>
         </li>
       </ul>
-      <h3>
+      <h3 style="font-weight: 700">
         Porsche Club of Niagara Region (Event Scheduling App)
       </h3>
       <p>
@@ -158,7 +159,7 @@
           </ul>
         </li>
       </ul>
-      <h3>
+      <h3 style="font-weight: 700">
         GenCyber 2023 Social Media Hacking Project (Individual Project)
       </h3>
       <p>Designed and developed for the 2023 GenCyber Summer Camp that gives campers an interactive look into the importance of
@@ -185,7 +186,7 @@
         </li>
       </ul>
 
-      <h3>
+      <h3 style="font-weight: 700">
         GenCyber 2023 Cybersecurity Bingo (Individual Project)
       </h3>
       <p>
@@ -205,9 +206,9 @@
         </li>
       </ul>
 
-      <h2>🏆 Accomplishments and Awards</h2>
+      <h2 style="font-weight: 900">Accomplishments and Awards 🏆 </h2>
       <hr>
-      <h3>
+      <h3 style="font-weight: 700">
         Monroe Community College
       </h3>
       <ul>
@@ -216,7 +217,7 @@
         <li>Accepted into Phi Theta Kappa Honor Society</li>
       </ul>
 
-      <h3>
+      <h3 style="font-weight: 700">
         Rochester Institute of Technology
       </h3>
       <ul>
@@ -225,9 +226,9 @@
     </section>
 
     <section class="right">
-      <h2> Professional Experience </h2>
+      <h2 style="font-weight: 900"> Professional Experience </h2>
       <hr>
-      <h3>Accessible Learning Labs at RIT</h3>
+      <h3 style="font-weight: 700">Accessible Learning Labs at RIT</h3>
       <p>
         Accessible Learning Labs at RIT (Rochester Institute of Technology) is an initiative and program aimed at
         creating accessible and inclusive learning experiences for individuals with disabilities, as well as advancing education
@@ -251,7 +252,7 @@
         <li>Completion of research for future labs and products</li>
         <li>Development and implementation of comprehensive social media strategy to expand project audience and viewership</li>
       </ul>
-      <h3>GenCyber 2023 at RIT</h3>
+      <h3 style="font-weight: 700">GenCyber 2023 at RIT</h3>
       <p>GenCyber is a national initiative aimed at increasing interest in cybersecurity careers and improving
         cybersecurity knowledge among students and educators. Gencyber specifically targets students in grades
         8-12 and offers summer camps where participants learn about various aspects of cybersecurity, such as secure
